[package]
name = "luad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.8", features = ["lua54", "vendored"] }
clap = "2.33"
nix = "0.26.1"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
toml = "0.5"
libc = "0.2"
rand = "0.8.5"

[profile.release]
opt-level = 's'
# 's' for size
lto = true
# panic = 'abort'
codegen-units = 1